Prevent distortion of images in blog cards
On mobile devices, the images were previously distorted.

--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -34,9 +34,17 @@
 .centered-card-image {
     display: block;
     align-self: center;
-    height: 85%;
-    max-width: 85%;
+    height: auto;
+    width: auto;
+    max-width: 100%;
+    max-height: 100%;
     border-radius: $border-radius;
+
+
+    @media #{$bp-tablet-landscape-up} {
+        max-height: 85%;
+        max-width: 85%;
+    }
 }
 
 .card-text {
